PA-396: Stop comment box overlapping sidebar on Firefox

--- a/app/stylesheets/partials/_page.scss
+++ b/app/stylesheets/partials/_page.scss
@@ -331,6 +331,10 @@ div.comment:hover {
   }  
 }
 
+form#new_comment {
+  clear: right;
+}
+
 .comment {
   margin-bottom: 1em;
 
